--- a/src/styles/blocks/delivery-card.scss
+++ b/src/styles/blocks/delivery-card.scss
@@ -1,5 +1,6 @@
 .delivery-card {
-  width: 200px;
+  // width: 150px;
+  width: 95%;
   font-style: normal;
   display: flex;
   flex-direction: column;
@@ -33,8 +34,15 @@
 
   &__description {
     font-weight: 700;
-    font-size: 22px;
-    line-height: 24px;
+    font-size: 18px;
+    line-height: 22px;
+
+    @include onTablet {
+      font-weight: 700;
+      font-size: 22px;
+      line-height: 24px;
+    }
+
     margin-bottom: 4px;
     text-align: center;
   }
@@ -48,14 +56,26 @@
 
   &__price-value {
     font-weight: 700;
-    font-size: 20px;
-    line-height: 22px;
+    font-size: 16px;
+    line-height: 18px;
+
+    @include onTablet {
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 22px;
+    }
     color: #f53838;
   }
 
   &__price-description {
     font-weight: 500;
-    font-size: 18px;
-    line-height: 20px;
+    font-size: 14px;
+    line-height: 16px;
+
+    @include onTablet {
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 20px;
+    }
   }
 }
