--- a/src/styles/blocks/servises.scss
+++ b/src/styles/blocks/servises.scss
@@ -57,7 +57,7 @@
   &__card {
     grid-column: span 1;
     padding: 6px;
-    border: 2px solid black;
+    border: 1px solid green;
     border-radius: 6px;
     width: 100%;
     max-width: 280px;
@@ -69,14 +69,15 @@
     gap: 4px;
     // background-color: #FFB118;
     transition: $transitionTime;
-    
+    transform-origin: center;
+    will-change: transform;
+
     justify-content: space-between;
     flex-grow: 1;
     flex-shrink: 1;
     flex-basis: auto;
     background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-
 
     &:hover {
       border-color: #f53838;
@@ -89,7 +90,6 @@
     }
 
     @include onTablet {
-      border: 3px solid black;
       border-radius: 8px;
       height: 150px;
     }
