--- a/src/styles/blocks/servises.scss
+++ b/src/styles/blocks/servises.scss
@@ -57,7 +57,7 @@
   &__card {
     grid-column: span 1;
     padding: 6px;
-    border: 1px solid green;
+    border: 1px solid black;
     border-radius: 6px;
     width: 100%;
     max-width: 280px;
