--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,5 +1,6 @@
 .page {
-  font-family: 'Inter', 'Arial', sans-serif;
+  // font-family: 'Inter', 'Arial', sans-serif;
+  font-family: 'Manrope', sans-serif;
   color: $textMainColor;
   scroll-behavior: smooth;
 }
